--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Sujan Poudel</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="/"><link rel="icon" href="favicon.ico"><script defer="defer" src="entry.9596327449d481eccfc3.bundle.js"></script></head><body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-yellow-300 selection:text-teal-900"><my-app></my-app></body><script>(function () {
+<!doctype html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Sujan Poudel</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <base href="/">
+  <link rel="icon" href="favicon.ico">
+  <script type="module" crossorigin src="/_sujan/entry.9596327449d481eccfc3.bundle.js"></script>
+  <!-- <script defer="defer" src="entry.9596327449d481eccfc3.bundle.js"></script> -->
+</head>
+
+<body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-yellow-300 selection:text-teal-900">
+  <my-app></my-app></body>
+<script>(function () {
     document.addEventListener("scroll", function () {
       const top = this.scrollTop;
       console.log(top);
     })
 
-  })();</script></html>
+  })();</script>
+
+</html>
