add scroll styles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Sujan Poudel</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="./"><link rel="icon" href="favicon.ico"><script defer="defer" src="entry.bc76be6db4900aa71131.bundle.js"></script></head><body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-yellow-300 selection:text-teal-900"><div class="container mx-auto"><div class="lg:pt-20 lg:px-20 pt-8 px-3"><div class="lg:flex justify-between gap-3"><app-header></app-header><main class="lg:w-1/2" id="main-content"><about></about><experience></experience><projects></projects></main></div></div></div></body><script>(function () {
-    document.addEventListener("scroll", function () {
-      const top = this.scrollTop;
-      console.log(top);
-    })
+<!doctype html><html><head><meta charset="utf-8"><title>Sujan Poudel</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="./"><link rel="icon" href="favicon.ico"><script defer="defer" src="entry.31b6db3464a91a153f9a.bundle.js"></script></head><body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:bg-yellow-300 selection:text-teal-900"><div class="container mx-auto"><div class="lg:pt-20 lg:px-20 pt-8 px-3"><div class="lg:flex justify-between gap-3"><app-header></app-header><main class="lg:w-1/2" id="main-content"><about></about><experience></experience><projects></projects></main></div></div></div></body><script>// (function () {
+  //   const about = document.getElementById("about");
+  //   console.log(about)
+  //   document.addEventListener("scroll", function () {
+      
+  //   })
 
-  })();</script></html>
+  // })();</script></html>
